# Planner

./: CMakeLists.txt  CMakeLists.txt.user.d5b498c  Planner.qmlproject  Planner.qmlproject.qtds  README.md  qmlmodules
content/: App.qml  CMakeLists.txt  Main.qml  Screen01.ui.qml
content/Components/: AddButton.qml  Agenda.qml  AgendaErrors.qml  Appointment_Large.qml  Appointment_Page.qml  AutoCompleteJob.qml  AutoCompleteText.qml  CalcButton.qml  CapacityBlock.qml  CapacityModel.qml  CloseButton.qml  DateTimeInput.qml  DayChart.qml  DeleteButton.qml  DurationInput.qml  DurationProgressBar.qml  EditButton.qml  ExpandButton.qml  JobBtn.qml  JobHeader.qml  JobListEdit.qml  JobLists.qml  Jobs.qml  LeftMenu.qml  LogItem.qml  MyBusyIndicator.qml  MyCheckBox.qml  MyComboBox.qml  MyMenuButton.qml  MyTextArea.qml  MyTextField.qml  PlannerBucket.qml  PlannerBucketItem.qml  PlannerBucketSubItem.qml  PlannerJob.qml  PlannerRunningDialog.qml  PlannerTemplate.qml  PlannerTemplateItem.qml  PlannerTemplateSubItem.qml  ServerErrorDialog.qml  (+10 more)
imports/: CMakeLists.txt
imports/Planner/: CMakeLists.txt  Style.qml  qmldir
imports/Planner/designer/: plugin.metainfo
src/: Defines.cpp  Defines.h  import_qml_plugins.h  main.cpp  usersettings.cpp  usersettings.h
src/Agenda/: agenda.cpp  agenda.h  agendablock.cpp  agendablock.h  agendablockitem.cpp  agendablockitem.h  agendablocks.cpp  agendablocks.h  agendadataitem.cpp  agendadataitem.h  agendadayitem.cpp  agendadayitem.h  agendadayitemblock.cpp  agendadayitemblock.h  agendadayitemmodel.cpp  agendadayitemmodel.h  agendadayitemsecondmodel.cpp  agendadayitemsecondmodel.h  agendadisplayitem.cpp  agendadisplayitem.h  agendaerroritem.cpp  agendaerroritem.h  agendaerrormodel.cpp  agendaerrormodel.h  agendaitem.cpp  agendaitem.h  agendaitemmodel.cpp  agendaitemmodel.h  agendaloader.cpp  agendaloader.h  agendaloaderitem.cpp  agendaloaderitem.h  agendamodel.cpp  agendamodel.h  agendaplanner.cpp  agendaplanner.h  agendapublisher.cpp  agendapublisher.h  agendawta.cpp  agendawta.h  (+8 more)
src/Appointments/: appointment.cpp  appointment.h  appointmenterroritem.cpp  appointmenterroritem.h  appointmenterrormodel.cpp  appointmenterrormodel.h  appointmentlog.cpp  appointmentlog.h  appointmentlogitem.cpp  appointmentlogitem.h  appointmentplanner.cpp  appointmentplanner.h  appointmentplanneritem.cpp  appointmentplanneritem.h  appointments.cpp  appointments.h  appointmentsjobmodel.cpp  appointmentsjobmodel.h  appointmentsmodel.cpp  appointmentsmodel.h  appointmenttype.cpp  appointmenttype.h  appointmenttypes.cpp  appointmenttypes.h
src/Database/: dbmanager.cpp  dbmanager.h  dbrequest.cpp  dbrequest.h
src/Jobs/: job.cpp  job.h  jobListModel.cpp  jobListModel.h  jobautocompletemodel.cpp  jobautocompletemodel.h  jobmodel.h  jobs.cpp  jobs.h  jobtaskmodel.cpp  jobtaskmodel.h
src/MSGraph/: graphbufferitem.cpp  graphbufferitem.h  msbucket.cpp  msbucket.h  mscategorys.cpp  mscategorys.h  msgraph.cpp  msgraph.h  msplanner.cpp  msplanner.h  mstask.cpp  mstask.h  solidgraph.cpp  solidgraph.h
src/Planner/: addlistmodel.cpp  addlistmodel.h  bucket.cpp  bucket.h  bucketitem.cpp  bucketitem.h  bucketmodel.cpp  bucketmodel.h  buckets.cpp  buckets.h  bucketsubitem.cpp  bucketsubitem.h  plannertemplate.cpp  plannertemplate.h  plannertemplateitem.cpp  plannertemplateitem.h  plannertemplates.cpp  plannertemplates.h  plannertemplatesubitem.cpp  plannertemplatesubitem.h
